# mageec

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
doc/: CMakeLists.txt  Doxyfile.in  Makefile.am  Makefile.in  mageec-design.texi  mageec.texi
gcc_plugin/: CMakeLists.txt  ChangeLog  FeatureExtract.cpp  Features.h  GCCCallbacks.cpp  GCCPlugin.cpp  MAGEECPlugin.h  Makefile.am  Makefile.in  Parameters.h  PluginInfo.cpp  README  feature-extract.cpp  gcc-callbacks.cpp  gcc-plugin.cpp  mageec-plugin.h  plugin-info.cpp
include/: Makefile.am  Makefile.in  elfhash.h  mageec-db.h  mageec-features.h  mageec-flags.h  mageec-ml.h  mageec-passes.h  mageec-result.h  mageec.h
include/mageec/: Attribute.h  AttributeSet.h  Database.h  DatabaseQuery.h  Decision.h  Feature.h  FeatureSet.h  Framework.h  ML.h  Parameter.h  ParameterSet.h  Result.h  SQLQuery.h  TrainedML.h  Types.h  Util.h  elfhash.h  mageec-db.h  mageec-decision.h  mageec-features.h  mageec-ml.h  mageec-passes.h  mageec-result.h  mageec.h  vectormath.h
include/mageec/ML/: 1NN.h  C5.h  FileML.h
lib/: Database.cpp  DatabaseQuery.cpp  Driver.cpp  Framework.cpp  Main.cpp  SQLQuery.cpp  TrainedML.cpp  Types.cpp  Util.cpp
lib/ML/: 1NN.cpp  C5.cpp  FileML.cpp
lib/ML/C5/: CMakeLists.txt  c50.c  defns.i  redefine.c  rsample.c  rulebasedmodels.c  transform.h
m4/: ax_boost_base.m4  ax_boost_python.m4  ax_python_devel.m4
mageec/: Makefile.am  Makefile.in  dbtool.cpp  elfhash.cpp  features.cpp  flags.cpp  hasher.cpp  mageec.cpp  mageechash.cpp  passes.cpp  python.cpp
ml/: Makefile.am  Makefile.in  database.cpp  ml.cpp
ml/C5/: Makefile.am  Makefile.in  classify-defns.h  classify-global.c  classify-hooks.c  classify-sample.c  siftrules.c
plugin/gcc_feature_extract/: AUTHORS  CMakeLists.txt  ChangeLog  FeatureExtract.cpp  FeatureExtract.h  Features.h  Plugin.cpp  Plugin.h  README
script/: build-and-measure.py  combined-elimination.py  feature-extract.py  feature_extract.py  generate-build.py  generate-builds.py  mageec.py  mageec_common.py  measure-code-size.py
testsuite/: Makefile.am  Makefile.in
testsuite/config/: site.exp.in  unix.exp
testsuite/gcc_plugin.tests/: Makefile.am  Makefile.in  feature-extract.exp
testsuite/lib/: mageec.exp
testsuite/mageec.tests/: Makefile.am  Makefile.in  hash.exp
testsuite/python.tests/: Makefile.am  Makefile.in  hash.py  test-python.exp  test.elf  test.py
tools/gcc_driver/: AUTHORS  CMakeLists.txt  ChangeLog  Driver.cpp  Parameters.h  README
training/: clang.py  evaltool.py  execute-pt2.sh  execute.sh  matrixgen  test-exec.sh  test-pt2.sh  test.py
