ACLOCAL_AMFLAGS = -I m4
SUBDIRS = ml mageec gcc_plugin testsuite doc

# Common header files to be included in distribution
EXTRA_DIST =  include/mageec.h include/mageec-ml.h include/mageec-features.h \
              include/mageec-flags.h include/elfhash.h
# Doxygen files to include in distribution
EXTRA_DIST += doc/mageec_logo.png

#if HAVE_DOXYGEN
#endif