# Compilation Flags
AM_LDFLAGS = -lm
AM_CFLAGS =

# Build C5.0 trainer
libexec_PROGRAMS = c5.0
c5_0_SOURCES = global.c\
               c50.c\
               construct.c\
               formtree.c\
               info.c\
               discr.c\
               contin.c\
               subset.c\
               prune.c\
               p-thresh.c\
               trees.c\
               siftrules.c\
               ruletree.c\
               rules.c\
               getdata.c\
               implicitatt.c\
               mcost.c\
               confmat.c\
               sort.c\
               update.c\
               attwinnow.c\
               classify.c\
               formrules.c\
               getnames.c\
               modelfiles.c\
               utility.c\
               xval.c